<resources>
    <string name="app_name">PomodorUs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1">FRAGMENT 1</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="acc_already">I already have an account!</string>
    <string name="i_don_t_have_an_account">I don\'t have an account!</string>
    <string name="i_already_have_an_account">I already have an account!</string>
    <string name="shared_session">Shared session</string>
    <string name="solo_session">Solo session</string>
    <string name="connect_to_spotify">Connect to Spotify</string>
    <string name="study_history">Study history</string>
    <string name="study_sessions">Study sessions</string>
    <string name="settings">Settings</string>
    <string name="Chats" />
    <string name="chats">Chats</string>
    <string name="start_session">Start Session</string>
    <string name="_25">25</string>
    <string name="_50">50</string>
    <string name="sesstTime">How long would you like to study?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="historyfragment">HistoryFragment</string>
    <string name="last_message">Last message</string>
    <string name="enter_message">Enter message!</string>
    <string name="time_left_for_next_break">Time left for next break:</string>
    <string name="no_pain_no_gain">No pain no gain!</string>
    <string name="ss">Settings</string>
    <string name="what_are_you_going_to_study">What are you going to study?</string>
    <string name="dateeeee">Dateeeee</string>
    <string name="how_are_you">How are you?</string>
    <string name="useremail">UserEmail</string>
    <string name="message">Message...</string>
    <string name="messages">Messages</string>
    <string name="update_list">Update List</string>
    <string name="terms_and_cons">By clicking Log In or Sign Up, you agree with our Terms. Learn how we procress your data in our Privacy Policy and Cookies Policy.</string>
</resources>