<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/sail_blue">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/golden"
            android:text="@string/useremail"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/gothammedium"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/user_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_are_you"
            android:fontFamily="@font/gothammedium"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/user_email"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/user_dateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateeeee"
            android:fontFamily="@font/gothammedium"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/user_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>