<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoloTimerFragment"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="0dp">


    <EditText
        android:id="@+id/session_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/what_are_you_going_to_study"
        android:inputType="textPersonName"
        android:textColor="@color/golden"
        android:textColorHint="@color/golden"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SessionBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/pollisansbold"
        android:text="@string/start_session"
        android:textAllCaps="false"
        android:textColor="@color/golden"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824"
        app:layout_constraintWidth_percent="0.6" />


    <Button
        android:id="@+id/timer50"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/pollisansbold"
        android:gravity="center"
        android:text="@string/_50"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/time25"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/pollisansbold"
        android:gravity="center"
        android:text="@string/_25"
        android:textAllCaps="false"

        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothammedium"
        android:text="Do you want Lofi music?"
        android:textColor="@color/golden"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothammedium"
        android:text="@string/sesstTime"
        android:textColor="@color/golden"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/noMusicBtn"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/pollisansbold"
        android:gravity="center"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/pollisansbold"
        android:gravity="center"
        android:text="@string/yes"
        android:textAllCaps="false"

        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518"
        app:layout_constraintWidth_percent="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>
