<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/back_tabs"
        android:layout_marginTop="5dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">

             <TextView
                 android:id="@+id/selector"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text=""
                 android:layout_weight="1"
                 android:background="@drawable/back_select"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/solo_session"
                android:gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/item2"
                android:gravity="center"
                android:textColor="@color/sail_blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/study_sessions"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ss"
                android:textColor="@color/sail_blue"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:name="com.example.pomodorus.SoloTimerFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentFrame"
            android:name="com.example.pomodorus.SoloTimerFragment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>